# Bicare360

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  CAREGIVER_MODULE_COMPLETE.md  CODEBASE_DEEP_INDEX.md  CODEBASE_INDEX.md  DEEP_ANALYSIS_RECOMMENDATIONS.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FEATURE_1_COMPLETION_REPORT.md  FEATURE_1_STATUS.txt  FINAL_STATUS_PITCH_READY.md  FINAL_STATUS_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_TESTING_GUIDE.md  LOGIN_CREDENTIALS_GUIDE.md  PATIENT_PORTAL_FEATURES.md  PHASE_2_PLANNING.md  PITCH_READY_GAP_ANALYSIS.md  PORTAL_ACCESS_GUIDE.md  PROJECT_STATUS.md  QUICK_ACCESS_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  READ_ME_FIRST.md  ROUTING_GUIDE.md  ROUTING_QUICK_REFERENCE.md  ROUTING_REFACTOR_REPORT.md  ROUTING_SUMMARY.md  ROUTING_TESTING_CHECKLIST.md  SPRINT_ROADMAP.md  SYSTEM_ARCHITECTURE_VISUAL.md  TDD_IMPLEMENTATION_GUIDE.md  WEEK2_IMPLEMENTATION_COMPLETE.md  WEEK_1_SUMMARY.md  WEEK_3_SUMMARY.md  render.yaml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY_HARDENING_COMPLETE.md  TESTING_GUIDE.md  TEST_SUMMARY.md  WEEK2_DAILY_GOALS_COMPLETE.md  conftest.py  create_adherence_sample_data.py  create_caregiver_bookings.py  create_chat_demo_data.py  create_demo_nurse_user.py  create_hospital_sample_data.py  create_nursing_sample_data.py  create_patient_nurse_chat_demo.py  create_patient_sample_data.py  create_test_users.py  full_test_output.txt  manage.py  pyproject.toml  pytest.ini  test_celery_async.py  test_celery_connection.py  test_celery_tasks.py  test_redis_channels.py
backend/apps/appointments/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py  views_patient_appointments.py
backend/apps/authentication/: __init__.py  apps.py  tests.py
backend/apps/caregivers/: admin.py  apps.py  models.py  (+3 more)
backend/bicare360/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/requirements/: base.txt  dev.txt  prod.txt  testing.txt
backend/vitals/: apps.py
(+250 files in other folders)
