[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "channels==4.0.0",
    "channels-redis==4.1.0",
    "daphne==4.0.0",
    "django>=6.0.1",
    "django-celery-beat>=2.1.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "environ>=1.0",
    "faker>=40.1.2",
    "guardian>=0.2.3",
    "pillow>=12.1.0",
    "redis>=7.1.0",
    "rest-framework-simplejwt>=0.0.2",
]
